# Projekt3

client/: CMakeLists.txt  functions.c  functions.h  main.c
server/: CMakeLists.txt  functions.c  functions.h  main.c
